# treecap

./: .gitignore  README.md  TODO.md  publish.sh  pyproject.toml
src/treecap/: __init__.py  cli.py
src/treecap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
workspace/: bump_version.sh  count_tokens.py  requirements-dev.txt  tree.txt  treecap.txt
